Bug 160414 - [Patch] Phonon-xine crashes with assertion failure if xine-lib does not have deinterlace support
Summary: [Patch] Phonon-xine crashes with assertion failure if xine-lib does not have ...
Status: RESOLVED FIXED
Alias: None
Product: Phonon
Classification: Frameworks and Libraries
Component: Xine backend (show other bugs)
Version: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Matthias Kretz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-05 17:34 UTC by Kevin Kofler
Modified: 2008-04-05 18:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Proposed patch for the crashes (11.06 KB, patch)
2008-04-05 17:35 UTC, Kevin Kofler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Kofler 2008-04-05 17:34:15 UTC
Version:            (using KDE 4.0.3)
Installed from:    Fedora RPMs
OS:                Linux

Phonon-xine assumes at 2 places that the xine-lib "tvtime" deinterlacing plugin is always available, and crashes with an assertion failure if it isn't:
* in xineoptions.cpp, affecting the "Sound" settings in systemsettings (shouldn't those be renamed to "Sound and Video" or "Multimedia"?) and
* in xinestream.cpp, affecting video playback.

Fedora's xine-lib does not include the tvtime plugin due to potential patent issues, see:
https://bugzilla.redhat.com/show_bug.cgi?id=441052

The proposed patch I'm about to attach (not tested yet, currently building in our build system) fixes Phonon not to crash if deinterlacing is not available. It does not impact functionality at all if the tvtime plugin is present.

See also: https://bugzilla.redhat.com/show_bug.cgi?id=440299
Comment 1 Kevin Kofler 2008-04-05 17:35:10 UTC
Created attachment 24201 [details]
Proposed patch for the crashes
Comment 2 Kevin Kofler 2008-04-05 17:40:57 UTC
FYI, the patch builds successfully in the Fedora build system.
Comment 3 Matthias Kretz 2008-04-05 17:54:58 UTC
SVN commit 793919 by mkretz:

Patch by Kevin Kofler. Thanks a lot.

fixes Phonon not to crash if deinterlacing is not available

BUG: 160414


 M  +48 -38    kcm/xineoptions.cpp  
 M  +1 -0      kcm/xineoptions.h  
 M  +1 -1      kcm/xineoptions.ui  
 M  +25 -25    xinestream.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=793919
Comment 4 Kevin Kofler 2008-04-05 17:57:31 UTC
Can we please backport this to 4.0 too?
Comment 5 Matthias Kretz 2008-04-05 18:18:22 UTC
> Can we please backport this to 4.0 too?


Already done.
Comment 6 Kevin Kofler 2008-04-05 18:20:24 UTC
That was fast, thanks!