Patch by Kevin Kofler. Thanks a lot.

fixes Phonon not to crash if deinterlacing is not available

BUG: 160414

svn path=/trunk/KDE/kdebase/runtime/; revision=793919